# xai-course

./: .gitignore  main.py  pyproject.toml
models/: titanic_model.pkl
notebooks/: 5Shapley.ipynb  8MutualInformation.ipynb
