[project]
name = "xai-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "captum==0.8.0",
    "dice-ml==0.12",
    "lime==0.2.0.1",
    "matplotlib==3.10.5",
    "pandas==2.3.2",
    "scikit-learn==1.5.1",
    "shap==0.48.0",
    "timm==1.0.19",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "transformers==4.54.1",
    "xgboost==3.0.4",
]
